changed the placeholder

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
      <div class="h-search">
         <form>
-            <input type="search" placeholder="Search by location..." class="search-input">
+            <input type="search" placeholder="Search by Price..." class="search-input">
             <input type="submit" value="search">
         </form>
      </div>
